--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
 /vendor/
+
+application/config/database.php
+application/config/constants.php
+.htaccess
+sftp-config.json
+sendgrid.env
